# PaddleOCR-json

./: build_linux.sh
.github/workflows/: README.md  build-release.yml
cpp/: CMakeLists.txt
cpp/include/: args.h  http_server.h  task.h
cpp/src/: args.cpp  http_server.cpp  main.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  structure_layout.cpp  structure_table.cpp  task.cpp  task_macos.cpp
cpp/tools/macos_dist_tools/: README.txt  run.sh
docs/: web-service-proposal.md
examples/: README.md  api_usage_examples.sh  http_server_example.cpp
project_files/cpp_infer/: CMakeLists.txt
project_files/cpp_infer/src/: CMakeLists.txt
